# yuleASR

./: .env.example  .gitignore  01-architecture-overview.md  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONFIG_TOOLS_README.md  DDS_ETH_SOAD_IMPLEMENTATION_SUMMARY.md  Doxyfile  ETH_Development_Analysis_Design.md  FINAL_SUMMARY.md  GIT_SETUP_GUIDE.md  LICENSE  Makefile  OPTIMIZATION_ROADMAP.md  OPTIMIZATION_UPDATE.md  PROJECT_OPTIMIZATION_REPORT.md  PROJECT_SUMMARY.md  README.md  TECH_SPEC.md  TEST_FRAMEWORK_SUMMARY.md  build.sh  improvements_report.json  push_to_github.sh  push_with_pat.sh
examples/: CMakeLists.txt  README.md  basic_pubsub.c  run_all_examples.sh
examples/adas_perception/: CMakeLists.txt  README.md  adas_config.yaml  adas_types.h  camera_publisher.c  e2e_config.yaml  lidar_publisher.c  object_detector.c  run_adas_demo.sh  sensor_fusion.c
examples/body_electronics/: CMakeLists.txt  README.md  body_config.yaml  body_types.h  door_controller.c  e2e_config.yaml  hvac_controller.c  lighting_controller.c  run_body_demo.sh  seat_controller.c
examples/can_demo/: main.c
examples/can_loopback/: README.md  main.c
examples/config/: adas_perception.yaml  infotainment.yaml  powertrain_control.yaml  vehicle_body.yaml
examples/diagnostics/: CMakeLists.txt  README.md  diagnostics_config.yaml  diagnostics_types.h  dtc_manager.c  e2e_config.yaml  routine_controller.c  run_diagnostics_demo.sh
examples/infotainment/: CMakeLists.txt  README.md  hud_publisher.c  infotainment_config.yaml  infotainment_types.h  media_controller.c  navigation_publisher.c  run_infotainment_demo.sh
examples/led_blink/: README.md  main.c
examples/powertrain_control/: CMakeLists.txt  README.md  bms_publisher.c  e2e_config.yaml  motor_publisher.c  powertrain_config.yaml  powertrain_types.h  regen_manager.c  run_powertrain_demo.sh  vcu_publisher.c
examples/temperature_sensor/: CMakeLists.txt  README.md  temp_sensor_publisher.c  temp_sensor_subscriber.c
src/: CMakeLists.txt
src/asw/: asw_interfaces.h
src/autosar/: CMakeLists.txt
src/autosar/adaptive/: ara_com_dds.c  ara_com_dds.h
src/autosar/arxml/: arxml_parser.c  arxml_parser.h
src/autosar/classic/: rte_dds.c  rte_dds.h
src/autosar/e2e/: e2e_dds_integration.c  e2e_dds_integration.h  e2e_protection.c  e2e_protection.h  e2e_state_machine.c  e2e_state_machine.h
src/bootloader/: README.md  bl_partition.c  bl_partition.h  bl_rollback.c  bl_rollback.h  bl_secure_boot.c  bl_secure_boot.h
src/bsw/common/: ComStack_Types.h  Compiler.h  Det.c  Det.h  Std_Types.h
src/bsw/integration/: BswM.c  BswM.h  BswM_test.c  EcuM.c  EcuM.h  EcuM_test.c
src/bsw/os/: CMakeLists.txt
src/common/: CMakeLists.txt  autosar_common.h  autosar_errors.h  autosar_types.h
src/common/log/: dds_log.c  dds_log.h
src/common/types/: eth_types.h
src/common/utils/: eth_utils.c  eth_utils.h
src/crypto_stack/: CMakeLists.txt  crypto_stack_integration.h
src/crypto_stack/cryif/: cryif_core.c  cryif_core.h
src/dds/: CMakeLists.txt
src/diagnostics/: CMakeLists.txt
src/eth_sm/: eth_sm.c
src/ethernet/: DRIVER_DESIGN.md  eth_manager.c  eth_manager.h
src/examples/: CMakeLists.txt
src/mcal/: CMakeLists.txt  mcal_storage.c
src/nvm/: CMakeLists.txt  README.md  example_nvm_usage.c  nvm.c  nvm.h  nvm.h.gch  nvm_block_manager.c  nvm_block_manager.h  nvm_block_manager.h.gch  nvm_core.c  nvm_core.h  nvm_core.h.gch  nvm_fee_adapter.c  nvm_job_queue.c  nvm_job_queue.h  nvm_job_queue.h.gch  nvm_redundancy.c  nvm_redundancy.h  nvm_redundancy.h.gch  nvm_storage_if.c  nvm_storage_if.h  nvm_storage_if.h.gch  nvm_types.h  nvm_types.h.gch  test_nvm_basic
src/ota/: README.md  ota_dds_publisher.c  ota_dds_publisher.h  ota_dem_integration.c  ota_dem_integration.h  ota_downloader.c  ota_downloader.h  ota_manager.c  ota_manager.h  ota_memory_pool.c  ota_memory_pool.h  ota_package.c  ota_package.h  ota_security.c  ota_security.h  ota_types.h  ota_uds_client.c  ota_uds_client.h
src/ros2_bridge/: rmw_ethdds.c  rmw_ethdds.h  rmw_security_bridge.c  rmw_security_bridge.h  rmw_type_support.c  rmw_type_support.h
src/safety/: CMakeLists.txt
src/soad/: soad.c  soad.h
src/tcpip/: tcpip_arp.c  tcpip_core.c  tcpip_dhcp.c  tcpip_icmp.c  tcpip_socket.c  tcpip_tcp.c  tcpip_udp.c
src/transport/: CMakeLists.txt  shm_transport.c  shm_transport.h  test_transport.c  transport_interface.c  transport_interface.h  transport_manager.c  transport_manager.h  udp_transport.c  udp_transport.h
src/tsn/: CMakeLists.txt  README.md  tsn_stack.c  tsn_stack.h
tests/: CMakeLists.txt  FRAMEWORK_GUIDE.md  README.md  TEST_FRAMEWORK_SUMMARY.md  test_autosar_rte.c  test_bootloader.c  test_ota_dds_integration.c  test_ota_uds_client.c
tests/framework/: memory_leak_detector.c  memory_leak_detector.h  test_runner.c
tests/hil/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  hil_host.py  hil_interface.c  hil_interface.h  report_generator.py  requirements.txt  run_tests.py  test_hil_interface.c
tests/integration/: Makefile  test_autosar_dds_integration.c  test_discovery_integration.c  test_e2e_dds_full.c  test_e2e_e2e_protection.c  test_e2e_ota.c  test_e2e_secoc.c  test_e2e_uds.c  test_security_integration.c  test_tsn_dds_integration.c
tests/mocks/: mock_det.c  mock_det.h  mock_ecual.c  mock_ecual.h  mock_eth_driver.c  mock_eth_driver.h  mock_freertos.c  mock_freertos.h  mock_mcal.c  mock_mcal.h  mock_os.c  mock_os.h  mock_services.c  mock_services.h
tests/multi_ecu/: test_multi_ecu_discovery.py  test_tsn_sync.py
tests/performance/: jitter_test.c  latency_test.c  test_latency.c  test_resource_usage.c  test_throughput.c  test_tsn_determinism.c  throughput_test.c
tests/ros2_bridge/: test_rmw_bridge.c  test_ros2_qos.py
tests/system/: test_end_to_end.c  test_fault_recovery.c  test_multi_node.c  test_stability.c
tests/tools/: run_tests.py  test_generator.py
tests/unit/: test_dds_qos.c  test_eth_buffer.c  test_eth_driver.c  test_eth_types.c  test_eth_utils.c  test_framework.h  test_mcu.c  test_runner.c
tests/unity/: unity.c  unity.h  unity_config.h  unity_internals.h
(+865 files in other folders)
